Add filtered search

--- a/src/components/hero-section/hero-section.scss
+++ b/src/components/hero-section/hero-section.scss
@@ -10,6 +10,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
   box-shadow: inset 0px -9px 35px rgba(0, 0, 0, 0.25);
 
   .container {
