--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -23,6 +23,11 @@ input {
   font-family: inherit;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 .container {
   width: 95%;
   max-width: 1200px;
