--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -4,7 +4,7 @@
 }
 
 .header {
-  padding: 1rem 0;
+  padding: 1.5rem 0;
   box-shadow: 0px 10px 10px 5px rgba(0, 0, 0, 0.25);
 
   .container {
@@ -14,23 +14,12 @@
 
   &__links {
     @include flex-ac;
-    gap: 1rem;
+    gap: 2rem;
   }
 
-  &__input-search {
-    background-color: transparent;
-    border: none;
-    padding: 1em;
-    border-radius: 20px;
-    color: #fff;
-
-    &::placeholder {
-      color: #fff;
-    }
-
-    &:focus {
-      background-color: rgba($color: #fff, $alpha: 0.3);
-      outline: none;
+  &__link {
+    .active {
+      color: darken($color: #fff, $amount: 50%);
     }
   }
 }
