Display team form

--- a/src/components/team/team.scss
+++ b/src/components/team/team.scss
@@ -7,10 +7,12 @@
   align-items: center;
   gap: 1.2rem;
   transition: transform 0.5s;
-  cursor: pointer;
 
-  &:hover {
-    transform: scale(1.05);
+  &--link {
+    cursor: pointer;
+    &:hover {
+      transform: scale(1.05);
+    }
   }
 
   &__logo {
