--- a/src/components/team-matches/team-matches.scss
+++ b/src/components/team-matches/team-matches.scss
@@ -1,14 +1,20 @@
 @use '../../styles/colors';
 
-.team-form {
+.team-matches {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 1.5rem;
+  text-align: center;
 
-  &__result {
-    font-size: 1.5rem;
-    font-weight: 700;
+  &__section {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
 
+  &__subtitle {
     &--win {
       color: colors.$color-green;
     }
@@ -17,7 +23,7 @@
       color: colors.$color-grey;
     }
 
-    &--lose {
+    &--loss {
       color: colors.$color-red;
     }
   }
