--- a/src/pages/team/team-page.scss
+++ b/src/pages/team/team-page.scss
@@ -1,7 +1,31 @@
+@use '../../styles/colors';
+
 .team-page {
   padding: 5rem 0;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: flex-start;
+
+  &__backwards-btn {
+    padding: 0.2em 0.5em;
+    background-color: transparent;
+    color: #fff;
+    border: 1px solid #fff;
+    border-radius: 50%;
+    font-size: 1.5rem;
+    font-weight: 700;
+    transition: all 0.15s;
+    cursor: pointer;
+
+    &:hover {
+      border-color: #000;
+      color: #000;
+    }
+  }
 
   &__stats {
+    width: 100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
