--- a/src/pages/team/team-page.scss
+++ b/src/pages/team/team-page.scss
@@ -1,10 +1,10 @@
 @use '../../styles/colors';
 
 .team-page {
-  padding: 5rem 0;
+  padding: 3rem 0 5rem;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 4rem;
   align-items: flex-start;
 
   &__backwards-btn {
@@ -36,7 +36,7 @@
     padding: 1.5rem;
   }
 
-  &__league {
+  &__goals {
     grid-row: 1 / 3;
     padding: 1.5rem;
   }
