Display team standings

--- a/src/components/standings/standings.scss
+++ b/src/components/standings/standings.scss
@@ -2,16 +2,33 @@
 
 .standings {
   overflow: hidden;
+  font-weight: 700;
 
   &__team {
     padding: 1rem;
+    border-bottom: 1px solid #000;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
-    &--highlighted {
-      color: colors.$color-red;
+    &:last-of-type {
+      border-bottom: none;
     }
+  }
 
-    &--odd {
-      background-color: lighten(colors.$color-secondary, 20%);
+  &__team-rank {
+    width: 5%;
+  }
+
+  &__team-logo {
+    max-width: 2rem;
+    margin-right: 1rem;
+  }
+
+  &__team-name {
+    width: 30%;
+    &--highlighted {
+      color: colors.$color-green;
     }
   }
 }
