--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -9,6 +9,15 @@
   padding: 0;
 }
 
+html,
+body {
+  font-size: 12px;
+
+  @media (min-width: 768px) {
+    font-size: 16px;
+  }
+}
+
 body {
   background-color: colors.$color-primary;
   color: #fff;
